Area functional. Css adjustments

--- a/Pf2eAreaVisualiser/src/styles.css
+++ b/Pf2eAreaVisualiser/src/styles.css
@@ -8,9 +8,9 @@
     font-family: 'Be Vietnam Pro', sans-serif;
   }
   :root {
-    --primary-color: #605DC8;
-    --secondary-color: #8B89E6;
-    --accent-color: #e8e7fa;
+    --primary-color: #86512d;
+    --secondary-color: #ca9f7b;
+    --accent-color: #fff3e8;
     --shadow-color: #E8E8E8;
   }
   
